# container_app_fastapi_appinsights

./: .gitignore  Dockerfile  README.md  pyproject.toml
deploy-app/: app.template.yaml  build_push_deploy.sh
infra-as-code/: terraform.tf
my_fastapi_app/: main.py
